Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1943

docstrings for enum values are ignored

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.1
    • None
    • Patch Available

    Description

      The HTML Generator ignores docstrings for enum values. The enum comment is rendered, but none of the comments for single values, like with the Numberz enum from DocStrings.thrift.

      BTW, we do not have JIRA components for HTML.

      Attachments

        Activity

          People

            jensg Jens Geyer
            jensg Jens Geyer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: