THRIFT-1943 docstrings for enum values are ignored

Patch: Jens Geyer